[package]
name = "esdb_archive_nif"
version = "0.1.0"
authors = ["rgfaber"]
edition = "2021"
description = "NIF optimizations for reckon-db archive compression"

[lib]
name = "esdb_archive_nif"
crate-type = ["cdylib"]

[dependencies]
# Rustler for Erlang NIF bindings
rustler = "0.34"

# LZ4 compression (fastest)
lz4_flex = "0.11"

# Zstandard compression (best ratio)
zstd = "0.13"

# Zlib compression (compatibility)
flate2 = "1.0"

[profile.release]
lto = true
opt-level = 3
