[package]
name = "esdb_crypto_nif"
version = "0.1.0"
authors = ["rgfaber"]
edition = "2021"
description = "NIF optimizations for reckon-db cryptographic operations"

[lib]
name = "esdb_crypto_nif"
crate-type = ["cdylib"]

[dependencies]
# Rustler for Erlang NIF bindings
rustler = "0.34"

# Ed25519 signatures
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# SHA-256 hashing
sha2 = "0.10"

# Base64 encoding
base64 = "0.22"

# For signature verification
signature = "2.2"

[profile.release]
lto = true
opt-level = 3
