[package]
name = "esdb_hash_nif"
version = "0.1.0"
authors = ["rgfaber"]
edition = "2021"
description = "NIF optimizations for reckon-db hashing operations"

[lib]
name = "esdb_hash_nif"
crate-type = ["cdylib"]

[dependencies]
# Rustler for Erlang NIF bindings
rustler = "0.34"

# xxHash - extremely fast non-cryptographic hash
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }

# FNV hash - fast for small keys
fnv = "1.0"

[profile.release]
lto = true
opt-level = 3
