[package]
name = "reckon_gater_crypto_nif"
version = "0.1.0"
authors = ["rgfaber"]
edition = "2021"
description = "High-performance NIF for reckon-db-gater cryptographic operations (Base58, pattern matching)"

[lib]
name = "reckon_gater_crypto_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
